# ldrlib

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/sets/: sets.h
include/utils/: finds.h
sets/: README.md
sets/tests/: test_main.cpp
test/sets/: sets_base.cpp
test/utils/: test_finds.cpp
